// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`orderDetails test order details  with populated data 1`] = `
Object {
  "attributes": Object {
    "billingAddress": Object {
      "address1": "address 1",
      "country": "country",
      "firstName": "first name",
      "isTaxExempt": false,
      "iso2Code": "GBGB",
      "lastName": "last name",
    },
    "calculatedDiscounts": Object {},
    "createdAt": "2021-21-21 21:21:21",
    "currencyIsoCode": "EUR",
    "expenses": Array [
      Object {
        "idSalesExpense": 10,
        "name": "expense",
        "sumGrossPrice": 10,
        "sumNetPrice": 10,
        "sumPrice": 10,
        "sumPriceToPayAggregation": 10,
        "sumTaxAmount": 10,
        "type": "expense_type",
        "unitGrossPrice": 10,
        "unitNetPrice": 10,
        "unitPriceToPayAggregation": 10,
        "unitTaxAmount": 10,
      },
    ],
    "items": Array [
      Object {
        "calculatedDiscounts": Array [],
        "canceledAmount": 0,
        "id": "0000000123456",
        "isPromo": false,
        "isReturnable": false,
        "metadata": Object {},
        "name": "item",
        "productOptions": Array [
          Object {},
        ],
        "quantity": 10,
        "refundableAmount": 10,
        "sku": "0000000123456",
        "sumDiscountAmountAggregation": 10,
        "sumDiscountAmountFullAggregation": 10,
        "sumExpensePriceAggregation": 10,
        "sumGrossPrice": 10,
        "sumNetPrice": 10,
        "sumPrice": 10,
        "sumPriceToPayAggregation": 10,
        "sumProductOptionPriceAggregation": 10,
        "sumSubtotalAggregation": 10,
        "sumTaxAmountFullAggregation": 10,
        "taxRate": "1.00",
        "taxRateAverageAggregation": "1.00",
        "unitDiscountAmountAggregation": 10,
        "unitDiscountAmountFullAggregation": 10,
        "unitExpensePriceAggregation": 10,
        "unitGrossPrice": 10,
        "unitNetPrice": 10,
        "unitPrice": 10,
        "unitPriceToPayAggregation": 10,
        "unitProductOptionPriceAggregation": 10,
        "unitSubtotalAggregation": 10,
        "unitTaxAmountFullAggregation": 10,
        "uuid": "akdsbfakshdbf-askdfbaksd-aksdjbfaks-asjdhfvajsdhf",
      },
    ],
    "payments": Array [
      Object {
        "amount": 10,
        "paymentMethod": "paymentMethod",
        "paymentProvider": "paymentProvider",
        "paymentReference": "PMT-PT--1234",
      },
    ],
    "priceMode": "GROSS",
    "productDiscounts": Object {
      "voucher": Object {
        "discountKey": "discountKey",
        "sumAmount": 3.99,
        "voucherCode": "discount",
      },
    },
    "shipments": Array [
      Object {
        "carrierName": "carrier",
        "currencyIsoCode": "EUR",
        "defaultGrossPrice": 10,
        "defaultNetPrice": 10,
        "erpShipmentStatus": "in_progres",
        "erpTrackingReference": "some-tracking-url",
        "erpTrackingUrl": "some-tracking-url",
        "maxDeliveryDays": 3,
        "minDeliveryDays": 1,
        "shipmentMethodName": "express_shipping",
      },
    ],
    "shippingAddress": Object {
      "address1": "address 1",
      "country": "country",
      "firstName": "first name",
      "isTaxExempt": false,
      "iso2Code": "GBGB",
      "lastName": "last name",
    },
    "status": Object {
      "exported": Object {
        "displayName": "oms.state.exported",
        "name": "exported",
      },
    },
    "totals": Object {
      "canceledTotal": 10,
      "discountTotal": 10,
      "expenseTotal": 10,
      "grandTotal": 10,
      "itemTotal": 10,
      "remunerationTotal": 10,
      "shippingTotal": 10,
      "subtotal": 10,
      "surchargeTotal": 10,
      "taxTotal": 10,
    },
  },
  "id": "PT--1234",
  "links": Object {
    "self": "http://self.order",
  },
  "type": "orders",
}
`;

exports[`orderDetails test order details  without data items 1`] = `
Object {
  "attributes": Object {
    "billingAddress": Object {
      "address1": "address 1",
      "country": "country",
      "firstName": "first name",
      "isTaxExempt": false,
      "iso2Code": "GBGB",
      "lastName": "last name",
    },
    "calculatedDiscounts": Object {},
    "createdAt": "2021-21-21 21:21:21",
    "currencyIsoCode": "EUR",
    "expenses": Array [
      Object {
        "idSalesExpense": 10,
        "name": "expense",
        "sumGrossPrice": 10,
        "sumNetPrice": 10,
        "sumPrice": 10,
        "sumPriceToPayAggregation": 10,
        "sumTaxAmount": 10,
        "type": "expense_type",
        "unitGrossPrice": 10,
        "unitNetPrice": 10,
        "unitPriceToPayAggregation": 10,
        "unitTaxAmount": 10,
      },
    ],
    "items": Array [],
    "payments": Array [
      Object {
        "amount": 10,
        "paymentMethod": "paymentMethod",
        "paymentProvider": "paymentProvider",
        "paymentReference": "PMT-PT--1234",
      },
    ],
    "priceMode": "GROSS",
    "productDiscounts": Object {
      "voucher": Object {
        "discountKey": "discountKey",
        "sumAmount": 3.99,
        "voucherCode": "discount",
      },
    },
    "shipments": Array [
      Object {
        "carrierName": "carrier",
        "currencyIsoCode": "EUR",
        "defaultGrossPrice": 10,
        "defaultNetPrice": 10,
        "erpShipmentStatus": "in_progres",
        "erpTrackingReference": "some-tracking-url",
        "erpTrackingUrl": "some-tracking-url",
        "maxDeliveryDays": 3,
        "minDeliveryDays": 1,
        "shipmentMethodName": "express_shipping",
      },
    ],
    "shippingAddress": Object {
      "address1": "address 1",
      "country": "country",
      "firstName": "first name",
      "isTaxExempt": false,
      "iso2Code": "GBGB",
      "lastName": "last name",
    },
    "status": Object {
      "exported": Object {
        "displayName": "oms.state.exported",
        "name": "exported",
      },
    },
    "totals": Object {
      "canceledTotal": 10,
      "discountTotal": 10,
      "expenseTotal": 10,
      "grandTotal": 10,
      "itemTotal": 10,
      "remunerationTotal": 10,
      "shippingTotal": 10,
      "subtotal": 10,
      "surchargeTotal": 10,
      "taxTotal": 10,
    },
  },
  "id": "PT--1234",
  "links": Object {
    "self": "http://self.order",
  },
  "type": "orders",
}
`;
